legacy-ts/src/nuvex-desktop/_build8.txt
    Updating crates.io index
     Locking 93 packages to latest compatible versions
      Adding ab_glyph v0.2.32
      Adding ab_glyph_rasterizer v0.1.10
      Adding ahash v0.8.12
      Adding android-activity v0.6.1
      Adding android-properties v0.2.2
      Adding as-raw-xcb-connection v1.0.1
      Adding bytemuck_derive v1.10.2
      Adding calloop v0.13.0
      Adding calloop v0.14.4
      Adding calloop-wayland-source v0.3.0
      Adding calloop-wayland-source v0.4.1
      Adding cfg_aliases v0.2.1
      Adding cgl v0.3.2
      Adding concurrent-queue v2.5.0
      Adding cursor-icon v1.2.0
      Adding deranged v0.5.8
      Adding dispatch v0.2.0
      Adding document-features v0.2.12
      Adding ecolor v0.29.1
      Adding eframe v0.29.1 (available: v0.34.1)
      Adding egui v0.29.1
      Adding egui-winit v0.29.1
      Adding egui_glow v0.29.1
      Adding emath v0.29.1
      Adding epaint v0.29.1
      Adding epaint_default_fonts v0.29.1
      Adding gl_generator v0.14.0
      Adding glow v0.14.2
      Adding glutin v0.32.3
      Adding glutin-winit v0.5.0
      Adding glutin_egl_sys v0.7.1
      Adding glutin_glx_sys v0.6.1
      Adding glutin_wgl_sys v0.6.1
      Adding hermit-abi v0.5.2
      Adding jni v0.22.4
      Adding jni-macros v0.22.4
      Adding jobserver v0.1.34
      Adding khronos_api v3.1.0
      Adding linux-raw-sys v0.4.15
      Adding litrs v1.0.0
      Adding ndk-context v0.1.1
      Adding nohash-hasher v0.2.0
      Adding num-conv v0.2.1
      Adding objc2-cloud-kit v0.2.2
      Adding objc2-contacts v0.2.2
      Adding objc2-core-location v0.2.2
      Adding objc2-link-presentation v0.2.2
      Adding objc2-symbols v0.2.2
      Adding objc2-ui-kit v0.2.2
      Adding objc2-uniform-type-identifiers v0.2.2
      Adding objc2-user-notifications v0.2.2
      Adding orbclient v0.3.51
      Adding owned_ttf_parser v0.25.1
      Adding pin-project v1.1.11
      Adding pin-project-internal v1.1.11
      Adding plain v0.2.3
      Adding polling v3.11.0
      Adding powerfmt v0.2.0
      Adding quick-xml v0.39.2
      Adding redox_syscall v0.4.1
      Adding redox_syscall v0.7.4
      Adding rustix v0.38.44
      Adding simd_cesu8 v1.1.1
      Adding simdutf8 v0.1.5
      Adding slotmap v1.1.1
      Adding smithay-client-toolkit v0.19.2
      Adding smithay-client-toolkit v0.20.0
      Adding smithay-clipboard v0.7.3
      Adding smol_str v0.2.2
      Adding static_assertions v1.1.0
      Adding time v0.3.47
      Adding time-core v0.1.8
      Adding time-macros v0.2.27
      Adding tracing-appender v0.2.4
      Adding ttf-parser v0.25.1
      Adding wayland-backend v0.3.15
      Adding wayland-client v0.31.14
      Adding wayland-csd-frame v0.3.0
      Adding wayland-cursor v0.31.14
      Adding wayland-protocols v0.32.12
      Adding wayland-protocols-experimental v20250721.0.1
      Adding wayland-protocols-misc v0.3.12
      Adding wayland-protocols-plasma v0.3.12
      Adding wayland-protocols-wlr v0.3.12
      Adding wayland-scanner v0.31.10
      Adding wayland-sys v0.31.11
      Adding web-time v1.1.0
      Adding webbrowser v1.2.0
      Adding windows-sys v0.52.0
      Adding winit v0.30.13
      Adding xcursor v0.3.10
      Adding xkbcommon-dl v0.4.2
      Adding xml-rs v0.8.28
 Downloading crates ...
  Downloaded ab_glyph_rasterizer v0.1.10
  Downloaded cfg_aliases v0.2.1
  Downloaded ecolor v0.29.1
  Downloaded document-features v0.2.12
  Downloaded powerfmt v0.2.0
  Downloaded glutin-winit v0.5.0
  Downloaded glutin_wgl_sys v0.6.1
  Downloaded glutin_egl_sys v0.7.1
  Downloaded time-core v0.1.8
  Downloaded owned_ttf_parser v0.25.1
  Downloaded num-conv v0.2.1
  Downloaded nohash-hasher v0.2.0
  Downloaded tracing-appender v0.2.4
  Downloaded web-time v1.1.0
  Downloaded egui_glow v0.29.1
  Downloaded egui-winit v0.29.1
  Downloaded litrs v1.0.0
  Downloaded bytemuck_derive v1.10.2
  Downloaded time-macros v0.2.27
  Downloaded static_assertions v1.1.0
  Downloaded xml-rs v0.8.28
  Downloaded webbrowser v1.2.0
  Downloaded epaint v0.29.1
  Downloaded eframe v0.29.1
  Downloaded glutin v0.32.3
  Downloaded ahash v0.8.12
  Downloaded glow v0.14.2
  Downloaded smol_str v0.2.2
  Downloaded ttf-parser v0.25.1
  Downloaded emath v0.29.1
  Downloaded time v0.3.47
  Downloaded ab_glyph v0.2.32
  Downloaded memoffset v0.9.1
  Downloaded libloading v0.8.9
  Downloaded gl_generator v0.14.0
  Downloaded deranged v0.5.8
  Downloaded cursor-icon v1.2.0
  Downloaded egui v0.29.1
  Downloaded khronos_api v3.1.0
  Downloaded winit v0.30.13
  Downloaded epaint_default_fonts v0.29.1
  Downloaded windows-sys v0.52.0
   Compiling khronos_api v3.1.0
   Compiling cfg_aliases v0.2.1
   Compiling bytemuck_derive v1.10.2
   Compiling xml-rs v0.8.28
   Compiling log v0.4.29
   Compiling ahash v0.8.12
   Compiling ttf-parser v0.25.1
   Compiling windows-sys v0.52.0
   Compiling ab_glyph_rasterizer v0.1.10
   Compiling nohash-hasher v0.2.0
   Compiling epaint_default_fonts v0.29.1
   Compiling memoffset v0.9.1
   Compiling winit v0.30.13
   Compiling glutin v0.32.3
   Compiling smol_str v0.2.2
   Compiling cursor-icon v1.2.0
   Compiling glutin-winit v0.5.0
   Compiling libloading v0.8.9
   Compiling powerfmt v0.2.0
   Compiling winapi v0.3.9
   Compiling gl_generator v0.14.0
   Compiling deranged v0.5.8
   Compiling webbrowser v1.2.0
   Compiling time-core v0.1.8
   Compiling litrs v1.0.0
   Compiling num-conv v0.2.1
   Compiling web-time v1.1.0
   Compiling glow v0.14.2
   Compiling nuvex-desktop v0.2.3 (C:\Users\leon\repos\nuvex\src\nuvex-desktop)
   Compiling static_assertions v1.1.0
   Compiling glutin_egl_sys v0.7.1
   Compiling glutin_wgl_sys v0.6.1
   Compiling owned_ttf_parser v0.25.1
   Compiling ab_glyph v0.2.32
   Compiling bytemuck v1.25.0
   Compiling document-features v0.2.12
   Compiling time v0.3.47
   Compiling emath v0.29.1
   Compiling image v0.25.10
   Compiling qoi v0.4.1
   Compiling ecolor v0.29.1
   Compiling image v0.24.9
   Compiling epaint v0.29.1
   Compiling tracing-appender v0.2.4
   Compiling egui v0.29.1
   Compiling arboard v3.6.1
   Compiling screenshots v0.8.10
   Compiling egui_glow v0.29.1
   Compiling egui-winit v0.29.1
   Compiling eframe v0.29.1
error[E0432]: unresolved import `native_windows_gui`
 --> src\updater.rs:2:5
  |
2 | use native_windows_gui as nwg;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ no external crate `native_windows_gui`

warning: unused import: `anyhow::Result`
 --> src\dispatcher.rs:2:5
  |
2 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> src\settings_window.rs:45:30
   |
45 |             saved_device_id: cfg.device_id,
   |                              ^^^^^^^^^^^^^ expected `String`, found `Option<String>`
   |
   = note: expected struct `std::string::String`
                found enum `std::option::Option<std::string::String>`
help: consider using `Option::expect` to unwrap the `std::option::Option<std::string::String>` value, panicking if the value is an `Option::None`
   |
45 |             saved_device_id: cfg.device_id.expect("REASON"),
   |                                           +++++++++++++++++

error[E0308]: mismatched types
  --> src\settings_window.rs:58:24
   |
58 |             device_id: self.saved_device_id.clone(),
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Option<String>`, found `String`
   |
   = note: expected enum `std::option::Option<std::string::String>`
            found struct `std::string::String`
help: try wrapping the expression in `Some`
   |
58 |             device_id: Some(self.saved_device_id.clone()),
   |                        +++++                            +

Some errors have detailed explanations: E0308, E0432.
For more information about an error, try `rustc --explain E0308`.
warning: `nuvex-desktop` (bin "nuvex-desktop") generated 1 warning
error: could not compile `nuvex-desktop` (bin "nuvex-desktop") due to 3 previous errors; 1 warning emitted
